--- a/2025-02-04 js 37/style.css
+++ b/2025-02-04 js 37/style.css
@@ -1,4 +1,9 @@
-div>input {
-    
-    margin: 50px;
+button {
+    padding: 10px 30px;
+    background-color: aqua;
+    border-radius: 8px;
+}
+input {
+    padding: 10px 20px;
+    border-radius: 8px;
 }
